serviceとconverterの追加機能実装_Test未完成