@@ -2,6 +2,7 @@ package raisetechtask.taskstudentsmanagement.finalversion.converter;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import raisetechtask.taskstudentsmanagement.finalversion.data.ApplicationStatus;
 import raisetechtask.taskstudentsmanagement.finalversion.data.Course;
 import raisetechtask.taskstudentsmanagement.finalversion.data.Student;
 import raisetechtask.taskstudentsmanagement.finalversion.domain.StudentDetail;
@@ -14,6 +15,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static raisetechtask.taskstudentsmanagement.finalversion.data.ApplicationStatusEnum.JUKOCHU;
 
 class StudentConverterTest {
 
@@ -29,8 +31,9 @@ class StudentConverterTest {
 	void 受講生情報とコース情報の呼びだしが空の状態でできていること() {
 		List<Student> studentList = new ArrayList<>();
 		List<Course> courseList = new ArrayList<>();
+		List<ApplicationStatus> statusList = new ArrayList<>();
 
-		List<StudentDetail> actualStudentDetails = converter.convertStudentDetails(studentList, courseList);
+		List<StudentDetail> actualStudentDetails = converter.convertStudentDetails(studentList, courseList, statusList);
 
 		assertNotNull(actualStudentDetails);
 		assertTrue(actualStudentDetails.isEmpty());
@@ -39,17 +42,22 @@ class StudentConverterTest {
 	@Test
 	void 単一の受講生情報に紐づいたコース情報が空の状態で返ってきていること() {
 		Student student = new Student(999, "田中太郎", "タナカタロウ", "たなか", "rftgyhu@huji.com", "東京", 35, "男性", "", false);
+
 		List<Student> studentList = new ArrayList<>();
 		studentList.add(student);
+
 		StudentDetail expectedDetail = new StudentDetail();
 		expectedDetail.setStudent(student);
 		expectedDetail.setStudentCourseList(new ArrayList<>());
+
 		List<StudentDetail> expectedStudentDetails = new ArrayList<>();
 		expectedStudentDetails.add(expectedDetail);
-
 		List<Course> courseList = new ArrayList<>();
+
+		List<ApplicationStatus> statusList = new ArrayList<>();
+
 		//実行
-		List<StudentDetail> actualStudentDetails = converter.convertStudentDetails(studentList, courseList);
+		List<StudentDetail> actualStudentDetails = converter.convertStudentDetails(studentList, courseList, statusList);
 		//検証
 		assertEquals(expectedStudentDetails, actualStudentDetails);
 	}
@@ -74,8 +82,11 @@ class StudentConverterTest {
 		List<StudentDetail> expectedStudentDetails = new ArrayList<>();
 		expectedStudentDetails.add(expectedDetailForStudent);
 		expectedStudentDetails.add(expectedDetailForStudent1);
+
+		List<ApplicationStatus> statusList = new ArrayList<>();
+
 		//実行
-		List<StudentDetail> actualStudentDetails = converter.convertStudentDetails(studentList, courseList);
+		List<StudentDetail> actualStudentDetails = converter.convertStudentDetails(studentList, courseList, statusList);
 		//検証
 		assertEquals(expectedStudentDetails, actualStudentDetails);
 	}
@@ -84,13 +95,15 @@ class StudentConverterTest {
 	void 受講生のリストと受講生コース情報のリストを渡したときに紐づかない受講生コース情報は除外されること() {
 		Student student = new Student(999, "田中太郎", "タナカタロウ", "たなか", "rftgyhu@huji.com", "東京", 35, "男性", "", false);
 		Course course = new Course(999, 888, "Java", LocalDate.now(), LocalDate.now().plusYears(1));
+		ApplicationStatus status = new ApplicationStatus(7, 999, JUKOCHU);
 
 		List<Student> studentList = List.of(student);
 		List<Course> courseList = List.of(course);
+		List<ApplicationStatus> applicationStatusList = List.of(status);
 
-		List<StudentDetail> actual = converter.convertStudentDetails(studentList, courseList);
+		List<StudentDetail> actual = converter.convertStudentDetails(studentList, courseList, applicationStatusList);
 
-		assertThat(actual.get(0).getStudent()).isEqualTo(student);
-		assertThat(actual.get(0).getStudentCourseList()).isEmpty();
+		assertThat(actual.getFirst().getStudent()).isEqualTo(student);
+		assertThat(actual.getFirst().getStudentCourseList()).isEmpty();
 	}
 }
